// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`@carbon/layout public API JavaScript exports 1`] = `
[
  "baseFontSize: 16",
  "borderRadius.border-radius-00: "0px"",
  "borderRadius.border-radius-02: "0.125rem"",
  "borderRadius.border-radius-04: "0.25rem"",
  "borderRadius.border-radius-08: "0.5rem"",
  "borderRadius.border-radius-16: "1rem"",
  "borderRadius.border-radius-24: "1.5rem"",
  "borderRadius.border-radius-max: "999999px"",
  "borderRadius00: "0px"",
  "borderRadius02: "0.125rem"",
  "borderRadius04: "0.25rem"",
  "borderRadius08: "0.5rem"",
  "borderRadius16: "1rem"",
  "borderRadius24: "1.5rem"",
  "borderRadiusMax: "999999px"",
  "breakpoint: [Function]",
  "breakpointDown: [Function]",
  "breakpointUp: [Function]",
  "breakpoints.sm.width: "20rem"",
  "breakpoints.sm.columns: 4",
  "breakpoints.sm.margin: "0"",
  "breakpoints.md.width: "42rem"",
  "breakpoints.md.columns: 8",
  "breakpoints.md.margin: "1rem"",
  "breakpoints.lg.width: "66rem"",
  "breakpoints.lg.columns: 16",
  "breakpoints.lg.margin: "1rem"",
  "breakpoints.xlg.width: "82rem"",
  "breakpoints.xlg.columns: 16",
  "breakpoints.xlg.margin: "1rem"",
  "breakpoints.max.width: "99rem"",
  "breakpoints.max.columns: 16",
  "breakpoints.max.margin: "1.5rem"",
  "container.0: "1.5rem"",
  "container.1: "2rem"",
  "container.2: "2.5rem"",
  "container.3: "3rem"",
  "container.4: "4rem"",
  "container01: "1.5rem"",
  "container02: "2rem"",
  "container03: "2.5rem"",
  "container04: "3rem"",
  "container05: "4rem"",
  "em: [Function]",
  "fluidSpacing.0: 0",
  "fluidSpacing.1: "2vw"",
  "fluidSpacing.2: "5vw"",
  "fluidSpacing.3: "10vw"",
  "fluidSpacing01: 0",
  "fluidSpacing02: "2vw"",
  "fluidSpacing03: "5vw"",
  "fluidSpacing04: "10vw"",
  "iconSize.0: "1rem"",
  "iconSize.1: "1.25rem"",
  "iconSize01: "1rem"",
  "iconSize02: "1.25rem"",
  "layout.0: "1rem"",
  "layout.1: "1.5rem"",
  "layout.2: "2rem"",
  "layout.3: "3rem"",
  "layout.4: "4rem"",
  "layout.5: "6rem"",
  "layout.6: "10rem"",
  "layout01: "1rem"",
  "layout02: "1.5rem"",
  "layout03: "2rem"",
  "layout04: "3rem"",
  "layout05: "4rem"",
  "layout06: "6rem"",
  "layout07: "10rem"",
  "miniUnit: 8",
  "miniUnits: [Function]",
  "px: [Function]",
  "rem: [Function]",
  "size2XLarge: "5rem"",
  "size2xl: "5rem"",
  "sizeLarge: "3rem"",
  "sizeLg: "3rem"",
  "sizeMd: "2.5rem"",
  "sizeMedium: "2.5rem"",
  "sizeSm: "2rem"",
  "sizeSmall: "2rem"",
  "sizeXLarge: "4rem"",
  "sizeXSmall: "1.5rem"",
  "sizeXl: "4rem"",
  "sizeXs: "1.5rem"",
  "sizes.XSmall: "1.5rem"",
  "sizes.Small: "2rem"",
  "sizes.Medium: "2.5rem"",
  "sizes.Large: "3rem"",
  "sizes.XLarge: "4rem"",
  "sizes.2XLarge: "5rem"",
  "spacing.0: "0.125rem"",
  "spacing.1: "0.25rem"",
  "spacing.2: "0.5rem"",
  "spacing.3: "0.75rem"",
  "spacing.4: "1rem"",
  "spacing.5: "1.5rem"",
  "spacing.6: "2rem"",
  "spacing.7: "2.5rem"",
  "spacing.8: "3rem"",
  "spacing.9: "4rem"",
  "spacing.10: "5rem"",
  "spacing.11: "6rem"",
  "spacing.12: "10rem"",
  "spacing01: "0.125rem"",
  "spacing02: "0.25rem"",
  "spacing03: "0.5rem"",
  "spacing04: "0.75rem"",
  "spacing05: "1rem"",
  "spacing06: "1.5rem"",
  "spacing07: "2rem"",
  "spacing08: "2.5rem"",
  "spacing09: "3rem"",
  "spacing10: "4rem"",
  "spacing11: "5rem"",
  "spacing12: "6rem"",
  "spacing13: "10rem"",
  "unstable_tokens.0: "spacing01"",
  "unstable_tokens.1: "spacing02"",
  "unstable_tokens.2: "spacing03"",
  "unstable_tokens.3: "spacing04"",
  "unstable_tokens.4: "spacing05"",
  "unstable_tokens.5: "spacing06"",
  "unstable_tokens.6: "spacing07"",
  "unstable_tokens.7: "spacing08"",
  "unstable_tokens.8: "spacing09"",
  "unstable_tokens.9: "spacing10"",
  "unstable_tokens.10: "spacing11"",
  "unstable_tokens.11: "spacing12"",
  "unstable_tokens.12: "spacing13"",
  "unstable_tokens.13: "fluidSpacing01"",
  "unstable_tokens.14: "fluidSpacing02"",
  "unstable_tokens.15: "fluidSpacing03"",
  "unstable_tokens.16: "fluidSpacing04"",
  "unstable_tokens.17: "container01"",
  "unstable_tokens.18: "container02"",
  "unstable_tokens.19: "container03"",
  "unstable_tokens.20: "container04"",
  "unstable_tokens.21: "container05"",
  "unstable_tokens.22: "sizeXSmall"",
  "unstable_tokens.23: "sizeSmall"",
  "unstable_tokens.24: "sizeMedium"",
  "unstable_tokens.25: "sizeLarge"",
  "unstable_tokens.26: "sizeXLarge"",
  "unstable_tokens.27: "size2XLarge"",
  "unstable_tokens.28: "iconSize01"",
  "unstable_tokens.29: "iconSize02"",
  "unstable_tokens.30: "layout01"",
  "unstable_tokens.31: "layout02"",
  "unstable_tokens.32: "layout03"",
  "unstable_tokens.33: "layout04"",
  "unstable_tokens.34: "layout05"",
  "unstable_tokens.35: "layout06"",
  "unstable_tokens.36: "layout07"",
]
`;

exports[`@carbon/layout public API Sass module index 1`] = `
[
  "$base-font-size: 16px",
  "$fluid-spacing-01: 0",
  "$fluid-spacing-02: 2vw",
  "$fluid-spacing-03: 5vw",
  "$fluid-spacing-04: 10vw",
  "$fluid-spacing.fluid-spacing-01: 0",
  "$fluid-spacing.fluid-spacing-02: 2vw",
  "$fluid-spacing.fluid-spacing-03: 5vw",
  "$fluid-spacing.fluid-spacing-04: 10vw",
  "$spacing-01: 0.125rem",
  "$spacing-02: 0.25rem",
  "$spacing-03: 0.5rem",
  "$spacing-04: 0.75rem",
  "$spacing-05: 1rem",
  "$spacing-06: 1.5rem",
  "$spacing-07: 2rem",
  "$spacing-08: 2.5rem",
  "$spacing-09: 3rem",
  "$spacing-10: 4rem",
  "$spacing-11: 5rem",
  "$spacing-12: 6rem",
  "$spacing-13: 10rem",
  "$spacing.spacing-01: 0.125rem",
  "$spacing.spacing-02: 0.25rem",
  "$spacing.spacing-03: 0.5rem",
  "$spacing.spacing-04: 0.75rem",
  "$spacing.spacing-05: 1rem",
  "$spacing.spacing-06: 1.5rem",
  "$spacing.spacing-07: 2rem",
  "$spacing.spacing-08: 2.5rem",
  "$spacing.spacing-09: 3rem",
  "$spacing.spacing-10: 4rem",
  "$spacing.spacing-11: 5rem",
  "$spacing.spacing-12: 6rem",
  "$spacing.spacing-13: 10rem",
  "$layout-01: 1rem",
  "$layout-02: 1.5rem",
  "$layout-03: 2rem",
  "$layout-04: 3rem",
  "$layout-05: 4rem",
  "$layout-06: 6rem",
  "$layout-07: 10rem",
  "$layout.layout-01: 1rem",
  "$layout.layout-02: 1.5rem",
  "$layout.layout-03: 2rem",
  "$layout.layout-04: 3rem",
  "$layout.layout-05: 4rem",
  "$layout.layout-06: 6rem",
  "$layout.layout-07: 10rem",
  "$border-radius-00: 0px",
  "$border-radius-02: 0.125rem",
  "$border-radius-04: 0.25rem",
  "$border-radius-08: 0.5rem",
  "$border-radius-16: 1rem",
  "$border-radius-24: 1.5rem",
  "$border-radius-max: 999999px",
  "$border-radius.border-radius-00: 0px",
  "$border-radius.border-radius-02: 0.125rem",
  "$border-radius.border-radius-04: 0.25rem",
  "$border-radius.border-radius-08: 0.5rem",
  "$border-radius.border-radius-16: 1rem",
  "$border-radius.border-radius-24: 1.5rem",
  "$border-radius.border-radius-max: 999999px",
  "$container-01: 1.5rem",
  "$container-02: 2rem",
  "$container-03: 2.5rem",
  "$container-04: 3rem",
  "$container-05: 4rem",
  "$container.container-01: 1.5rem",
  "$container.container-02: 2rem",
  "$container.container-03: 2.5rem",
  "$container.container-04: 3rem",
  "$container.container-05: 4rem",
  "$icon-size-01: 1rem",
  "$icon-size-02: 1.25rem",
  "$icon-size.icon-size-01: 1rem",
  "$icon-size.icon-size-02: 1.25rem",
  "$size-xs: 1.5rem",
  "$size-sm: 2rem",
  "$size-md: 2.5rem",
  "$size-lg: 3rem",
  "$size-xl: 4rem",
  "$size-2xl: 5rem",
  "@function to-rem",
  "@function rem",
  "@function em",
]
`;

exports[`@carbon/layout public API Sass module scss/border-radius 1`] = `
[
  "$border-radius-00: 0px",
  "$border-radius-02: 0.125rem",
  "$border-radius-04: 0.25rem",
  "$border-radius-08: 0.5rem",
  "$border-radius-16: 1rem",
  "$border-radius-24: 1.5rem",
  "$border-radius-max: 999999px",
  "$border-radius.border-radius-00: 0px",
  "$border-radius.border-radius-02: 0.125rem",
  "$border-radius.border-radius-04: 0.25rem",
  "$border-radius.border-radius-08: 0.5rem",
  "$border-radius.border-radius-16: 1rem",
  "$border-radius.border-radius-24: 1.5rem",
  "$border-radius.border-radius-max: 999999px",
]
`;

exports[`@carbon/layout public API Sass module scss/convert 1`] = `
[
  "$base-font-size: 16px",
  "@function to-rem",
  "@function rem",
  "@function em",
]
`;

exports[`@carbon/layout public API Sass module scss/modules/convert 1`] = `
[
  "$base-font-size: 16px",
  "@function to-rem",
  "@function rem",
  "@function em",
]
`;

exports[`@carbon/layout public API Sass module scss/spacing 1`] = `
[
  "$fluid-spacing-01: 0",
  "$fluid-spacing-02: 2vw",
  "$fluid-spacing-03: 5vw",
  "$fluid-spacing-04: 10vw",
  "$fluid-spacing.fluid-spacing-01: 0",
  "$fluid-spacing.fluid-spacing-02: 2vw",
  "$fluid-spacing.fluid-spacing-03: 5vw",
  "$fluid-spacing.fluid-spacing-04: 10vw",
  "$spacing-01: 0.125rem",
  "$spacing-02: 0.25rem",
  "$spacing-03: 0.5rem",
  "$spacing-04: 0.75rem",
  "$spacing-05: 1rem",
  "$spacing-06: 1.5rem",
  "$spacing-07: 2rem",
  "$spacing-08: 2.5rem",
  "$spacing-09: 3rem",
  "$spacing-10: 4rem",
  "$spacing-11: 5rem",
  "$spacing-12: 6rem",
  "$spacing-13: 10rem",
  "$spacing.spacing-01: 0.125rem",
  "$spacing.spacing-02: 0.25rem",
  "$spacing.spacing-03: 0.5rem",
  "$spacing.spacing-04: 0.75rem",
  "$spacing.spacing-05: 1rem",
  "$spacing.spacing-06: 1.5rem",
  "$spacing.spacing-07: 2rem",
  "$spacing.spacing-08: 2.5rem",
  "$spacing.spacing-09: 3rem",
  "$spacing.spacing-10: 4rem",
  "$spacing.spacing-11: 5rem",
  "$spacing.spacing-12: 6rem",
  "$spacing.spacing-13: 10rem",
  "$layout-01: 1rem",
  "$layout-02: 1.5rem",
  "$layout-03: 2rem",
  "$layout-04: 3rem",
  "$layout-05: 4rem",
  "$layout-06: 6rem",
  "$layout-07: 10rem",
  "$layout.layout-01: 1rem",
  "$layout.layout-02: 1.5rem",
  "$layout.layout-03: 2rem",
  "$layout.layout-04: 3rem",
  "$layout.layout-05: 4rem",
  "$layout.layout-06: 6rem",
  "$layout.layout-07: 10rem",
]
`;

exports[`@carbon/layout public API Sass module scss/utilities 1`] = `
[
  "@function map-deep-get",
  "@function key-by-index",
  "@function last-map-item",
]
`;

exports[`@carbon/layout public API published files 1`] = `
[
  "README.md",
  "docs/sass.md",
  "es/index.js",
  "index.scss",
  "js/generated/layout-tokens.d.ts",
  "js/generated/layout-tokens.js",
  "lib/index.d.ts",
  "lib/index.js",
  "lib/tokens.d.ts",
  "package.json",
  "scss/_border-radius.scss",
  "scss/_convert.scss",
  "scss/_spacing.scss",
  "scss/_utilities.scss",
  "scss/generated/_border-radius.scss",
  "scss/generated/_container.scss",
  "scss/generated/_fluid-spacing.scss",
  "scss/generated/_icon-size.scss",
  "scss/generated/_layout.scss",
  "scss/generated/_size.scss",
  "scss/generated/_spacing.scss",
  "scss/modules/_convert.scss",
  "src/index.ts",
  "src/tokens.ts",
  "style-dictionary/formats/js-layout.js",
  "style-dictionary/formats/scss-layout.js",
  "style-dictionary/sd.config.js",
  "telemetry.yml",
  "tokens/README.md",
  "tokens/layout.tokens.json",
  "tsconfig.json",
  "tsconfig.types.json",
  "umd/index.js",
]
`;

exports[`@carbon/layout public API type declarations 1`] = `
[
  "unstable_tokens: readonly ["spacing01", "spacing02", "spacing03", "spacing04", "spacing05", "spacing06", "spacing07", "spacing08", "spacing09", "spacing10", "spacing11", "spacing12", "spacing13", "fluidSpacing01", "fluidSpacing02", "fluidSpacing03", "fluidSpacing04", "container01", "container02", "container03", "container04", "container05", "sizeXSmall", "sizeSmall", "sizeMedium", "sizeLarge", "sizeXLarge", "size2XLarge", "iconSize01", "iconSize02", "layout01", "layout02", "layout03", "layout04", "layout05", "layout06", "layout07"]",
  "type BreakpointName = BreakpointName",
  "type Breakpoint = Breakpoint",
  "type SizeName = SizeName",
  "type BorderRadiusToken = BorderRadiusToken",
  "baseFontSize: 16",
  "rem: (px: number) => string",
  "em: (px: number) => string",
  "px: (value: number) => string",
  "breakpoints.sm.width: string",
  "breakpoints.sm.columns: number",
  "breakpoints.sm.margin: string",
  "breakpoints.md: [Same as breakpoints.sm]",
  "breakpoints.lg: [Same as breakpoints.sm]",
  "breakpoints.xlg: [Same as breakpoints.sm]",
  "breakpoints.max: [Same as breakpoints.sm]",
  "breakpointUp: (name: BreakpointName) => string",
  "breakpointDown: (name: BreakpointName) => string",
  "breakpoint: (name: BreakpointName) => string",
  "miniUnit: 8",
  "miniUnits: (count: number) => string",
  "spacing: string[]",
  "fluidSpacing: (string | number)[]",
  "layout: string[]",
  "container: string[]",
  "sizeXSmall: string",
  "sizeSmall: string",
  "sizeMedium: string",
  "sizeLarge: string",
  "sizeXLarge: string",
  "size2XLarge: string",
  "sizes.XSmall: string",
  "sizes.Small: string",
  "sizes.Medium: string",
  "sizes.Large: string",
  "sizes.XLarge: string",
  "sizes.2XLarge: string",
  "iconSize: string[]",
  "borderRadius.border-radius-00: string",
  "borderRadius.border-radius-02: string",
  "borderRadius.border-radius-04: string",
  "borderRadius.border-radius-08: string",
  "borderRadius.border-radius-16: string",
  "borderRadius.border-radius-24: string",
  "borderRadius.border-radius-max: string",
  "spacing01: string",
  "spacing02: string",
  "spacing03: string",
  "spacing04: string",
  "spacing05: string",
  "spacing06: string",
  "spacing07: string",
  "spacing08: string",
  "spacing09: string",
  "spacing10: string",
  "spacing11: string",
  "spacing12: string",
  "spacing13: string",
  "fluidSpacing01: number",
  "fluidSpacing02: string",
  "fluidSpacing03: string",
  "fluidSpacing04: string",
  "container01: string",
  "container02: string",
  "container03: string",
  "container04: string",
  "container05: string",
  "sizeXs: string",
  "sizeSm: string",
  "sizeMd: string",
  "sizeLg: string",
  "sizeXl: string",
  "size2xl: string",
  "iconSize01: string",
  "iconSize02: string",
  "borderRadius00: string",
  "borderRadius02: string",
  "borderRadius04: string",
  "borderRadius08: string",
  "borderRadius16: string",
  "borderRadius24: string",
  "borderRadiusMax: string",
  "layout01: string",
  "layout02: string",
  "layout03: string",
  "layout04: string",
  "layout05: string",
  "layout06: string",
  "layout07: string",
]
`;
